开始实现inbox和消息缓存，完善车辆控制

--- a/etc/app.conf
+++ b/etc/app.conf
@@ -16,8 +16,13 @@ db=0 # Redis数据库索引号
 
 [car]
 port=8051 #监听车发来的Socket连接的端口号
-SendCommandIntervalInMillisecond=200 #向小车发送命令的间隔，单位毫秒，默认200
+sendCommandIntervalInMillisecond=160 #向小车发送命令的间隔，单位毫秒，默认200
 
 
 [ location ]
 updateIntervalInSecond=5 # 定位功能间隔，多久进行一次全盘人员定位。每次更新使用最新数据，单位秒，默认5
+
+
+[ chat ]
+saveStaticFileDirPrefix=./static/chat/ # 聊天记录保存的目录前缀
+serverFileUrlPrefix=http://localhost:8080/im/static/file/ # 服务器上聊天记录的文件访问前缀,一定最后要加上斜杠
