--- a/etc/app.conf
+++ b/etc/app.conf
@@ -9,7 +9,7 @@ password=1234
 tableName=terrain   # 建立一个字符集为 utf8mb4 的空数据库
 
 [redis]
-ip=localhost # Redis服务器IP
+ip=127.0.0.1 # Redis服务器IP
 port=6379 # Redis服务器端口号
 password=1234 # Redis服务器密码
 db=0 # Redis数据库索引号
